high contrast fix in Network tool's panel
Bug: 1048378

--- a/front_end/data_grid/dataGrid.css
+++ b/front_end/data_grid/dataGrid.css
@@ -271,3 +271,23 @@
     width: 5px;
     z-index: 500;
 }
+
+@media (forced-colors: active) {
+    .data-grid table.data tr.revealed.selected,
+    .data-grid:focus table.data tr.selected {
+        forced-color-adjust: none;
+        background-color: Highlight !important;
+        color: HighlightText !important;
+    }
+    .data-grid.no-selection[data-keyboard-focus="true"]:focus {
+        forced-color-adjust: none;
+        background: Canvas !important;
+        border: 1px solid Highlight !important;
+    }
+    .striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd),
+    .striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even),
+    .request-cookies-view tr.revealed.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(2n) {
+        forced-color-adjust: none;
+        background: Canvas !important;
+    }
+}
